[package]
name = "docd"
version = "0.0.1"
edition = "2021"
description = "Render a directory of markdown into one interactive, git-friendly HTML page."

[[bin]]
name = "docd"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
comrak = "0.28"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
regex = "1"
tiny_http = "0.12"
